update all links to include liquid site.baseurl

--- a/_designs/designprogress.html
+++ b/_designs/designprogress.html
@@ -7,10 +7,10 @@ summary: "follow the design process of this microsite"
 <br>
 <h3>Prototypes</h3>
 <p>In week 8, our team put together individual mockups of how we envisioned the site. Using Slack and our Canvas group discussion board, we picked out the common elements among our individual designs to put together a group design.</p>
-<a href="../../images/groupb_moodboard.jpg" title="moodboard"><figure><img class="mood" src="../../images/groupb_moodboard.jpg" alt="Moodboard" width="400"></figure></a>
+<a href="{{site.baseurl}}/images/groupb_moodboard.jpg" title="moodboard"><figure><img class="mood" src="{{site.baseurl}}/images/groupb_moodboard.jpg" alt="Moodboard" width="400"></figure></a>
 
 
-<a href="../../images/groupb_mockupblue.jpg"><figure><img class="mood" src="../../images/groupb_mockupblue.jpg" alt="mockup" width="400"></figure></a>
+<a href="{{site.baseurl}}/images/groupb_mockupblue.jpg"><figure><img class="mood" src="{{site.baseurl}}/images/groupb_mockupblue.jpg" alt="mockup" width="400"></figure></a>
 <h3>Mockups</h3>
 <p>Using the common elements from our mockups, we narrowed the process to this mockup over the next few weeks choosing the persona of a student with casual language, but adding in an element for faculty because we did not believe only one persona would use the site.</p>
 <p>Since as a group we had created a homepage, we each took on individual pages for our individual html assignment, creating the content for what would become our microsite. Putting together these individual pages, we then chose which design to move forward with. We chose Karla's design because she used most of the elements that aligned with our individual designs on one page: nav bar, side bar, color scheme, prominent graphic image.</p>
@@ -26,7 +26,7 @@ summary: "follow the design process of this microsite"
 
   <div class="carousel-inner">
     <div class="carousel-item active">
-     <a href="../../images/april_html.png" title="April's HTML page"><img class="d-block w-100" src="../../images/april_html.png" alt="April's HTML with highlighted submenu"></a>
+     <a href="{{site.baseurl}}/images/april_html.png" title="April's HTML page"><img class="d-block w-100" src="{{site.baseurl}}/images/april_html.png" alt="April's HTML with highlighted submenu"></a>
      <div class="carousel-caption d-none d-md-block">
      <h4>April's HTML Page</h4>
      <p>Submenu options adapted to final design</p>
@@ -34,7 +34,7 @@ summary: "follow the design process of this microsite"
     </div>
 
     <div class="carousel-item">
-     <a href="../../images/danielle_html.png" title="April's HTML page"><img class="d-block w-100" src="../../images/danielle_html.png" alt="Danielle's HTML with highlighted navigation bar"></a>
+     <a href="{{site.baseurl}}/images/danielle_html.png" title="April's HTML page"><img class="d-block w-100" src="{{site.baseurl}}/images/danielle_html.png" alt="Danielle's HTML with highlighted navigation bar"></a>
       <div class="carousel-caption d-none d-md-block">
        <h4>Danielle's HTML Page</h4>
      <p>Navigation bar adapted to final design</p>
@@ -42,7 +42,7 @@ summary: "follow the design process of this microsite"
    </div>
 
     <div class="carousel-item">
-     <a href="../../images/katherine_html.png" title="Katherine's HTML page"><img class="d-block w-100" src="../../images/katherine_html.png" alt="Katherine's HTML with highlighted image"></a>
+     <a href="{{site.baseurl}}/images/katherine_html.png" title="Katherine's HTML page"><img class="d-block w-100" src="{{site.baseurl}}/images/katherine_html.png" alt="Katherine's HTML with highlighted image"></a>
       <div class="carousel-caption d-none d-md-block">
        <h4>Katherine's HTML Page</h4>
      <p>Feature images adapted to final design</p>
@@ -50,7 +50,7 @@ summary: "follow the design process of this microsite"
    </div>
 
     <div class="carousel-item">
-     <a href="../../images/karla_html.png" title="Karla's HTML page"><img class="d-block w-100" src="../../images/karla_html.png" alt="Karla's HTML with highlighted features"></a>
+     <a href="{{site.baseurl}}/images/karla_html.png" title="Karla's HTML page"><img class="d-block w-100" src="{{site.baseurl}}/images/karla_html.png" alt="Karla's HTML with highlighted features"></a>
       <div class="carousel-caption d-none d-md-block">
        <h4>Karla's HTML Page</h4>
      <p>Group elements adapted final Bootstrap design</p>
@@ -79,7 +79,7 @@ summary: "follow the design process of this microsite"
 <p>This home page table was created using our mockup. We have changed the subject content and instead of using an updated post, we have made a mini sitemap that explains how to navigate our site. If this site is implemented, that can be changed to a post feature.</p>
 </td>
   <td>
-<figure><a href="../../images/homepage_table.pdf" title="Homepage Table PDF"><img class="thumbnail" src="../../images/homepage_table.png" alt="Homepage Table" width="400"></a>
+<figure><a href="{{site.baseurl}}/images/homepage_table.pdf" title="Homepage Table PDF"><img class="thumbnail" src="{{site.baseurl}}/images/homepage_table.png" alt="Homepage Table" width="400"></a>
 <figcaption class="figure-caption text-center">Homepage Table <br/> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -89,7 +89,7 @@ summary: "follow the design process of this microsite"
 <p>This is the tutorial page table created by Katherine. All priorities executed as planned.</p>
 </td>
   <td>
-<figure><a href="../../images/printing_tutorial_Katherine.pdf" title="Printing Tutorial Table PDF"><img class="thumbnail" src="../../images/printing_tutorial_Katherine.png" alt="Printing Tutorial Page Table"></a>
+<figure><a href="{{site.baseurl}}/images/printing_tutorial_Katherine.pdf" title="Printing Tutorial Table PDF"><img class="thumbnail" src="{{site.baseurl}}/images/printing_tutorial_Katherine.png" alt="Printing Tutorial Page Table"></a>
 <figcaption class="figure-caption text-center">Printing Tutorial Page Table <br> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -99,7 +99,7 @@ summary: "follow the design process of this microsite"
 <p>This is the FAQ page table created by Danielle. Priority 1 achieved- page has list of questions and links to # on page for answer. Priority 2 changed- live help in aside was postponed due to time constraints in coding. Priority 3 achieved- common nav bar completed using Jekyll layout. Priority 4 achieved- hours completed, located in footer.</p>
 </td>
   <td>
-<figure><a href="../../images/faq_Danielle.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="../../images/faq_Danielle.png" alt="FAQ Page Table PDF"></a>
+<figure><a href="{{site.baseurl}}/images/faq_Danielle.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="{{site.baseurl}}/images/faq_Danielle.png" alt="FAQ Page Table PDF"></a>
 <figcaption class="figure-caption text-center">FAQ Page Table<br> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -109,7 +109,7 @@ summary: "follow the design process of this microsite"
 <p>This is the faculty page table created by April. The content for Priority 1 has changed. A list of disciplines that are currently using 3D printing technology has been provided on the FAQ page.  A video from a university utilizing 3D printing will be included on the page instead of an article. Links to instruction and lesson plan sites were added to the page by group members.  </p>
 </td>
 <td>
-<figure><a href="../../images/faculty_April.pdf" title="Faculty Page Table PDF"><img class="thumbnail" src="../../images/facultypagetable.png" alt="Faculty Page Table"></a>
+<figure><a href="{{site.baseurl}}/images/faculty_April.pdf" title="Faculty Page Table PDF"><img class="thumbnail" src="{{site.baseurl}}/images/facultypagetable.png" alt="Faculty Page Table"></a>
 <figcaption class="figure-caption text-center">Faculty Page Table<br> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -119,7 +119,7 @@ summary: "follow the design process of this microsite"
 <p>This is the appointment page table created by Karla. Priority 1 achieved- additional fields added. Priority 2 changed- Gallery added to Jekyll layout. Social media accounts not created; could be added to aside or footer if site is implemented in future.</p>
 </td>
   <td>
-<figure><a href="../../images/Make_appoinment_Karla.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="../../images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF"></a>
+<figure><a href="{{site.baseurl}}/images/Make_appoinment_Karla.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="{{site.baseurl}}/images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF"></a>
 <figcaption class="figure-caption text-center">Make an Appointment Page Table<br> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
