--- a/_designs/usability.html
+++ b/_designs/usability.html
@@ -45,7 +45,7 @@ summary: "Information about the Usability Study conducted on this site"
 
       <div class="carousel-inner">
         <div class="carousel-item active">
-            <a href="../../images/homechart.png" title="Is the homepage easy to navigate?"><img class="d-block w-100" src="../../images/homechart.png" alt="chart of question results"></a>
+            <a href="{{site.baseurl}}/images/homechart.png" title="Is the homepage easy to navigate?"><img class="d-block w-100" src="{{site.baseurl}}/images/homechart.png" alt="chart of question results"></a>
             <div class="carousel-caption d-none d-md-block">
             <h4>Home Page Question</h4>
             <p>100% of participants found the homepage easy to navigate</p>
@@ -53,7 +53,7 @@ summary: "Information about the Usability Study conducted on this site"
         </div>
 
         <div class="carousel-item">
-            <a href="../../images/tutorchart1.png" title="Does the provided text clearly explain 3D printing methods?"><img class="d-block w-100" src="../../images/tutorchart1.png" alt="chart of question results"></a>
+            <a href="{{site.baseurl}}/images/tutorchart1.png" title="Does the provided text clearly explain 3D printing methods?"><img class="d-block w-100" src="{{site.baseur}}/images/tutorchart1.png" alt="chart of question results"></a>
             <div class="carousel-caption d-none d-md-block">
             <h4>Tutorial Page Question 1</h4>
          <p>93% of particpants found the content to be clear.</p>
@@ -61,7 +61,7 @@ summary: "Information about the Usability Study conducted on this site"
        </div>
 
         <div class="carousel-item">
-            <a href="../../images/tutorchart2.png" title="Does the video present any compatibility issues and open smoothly?"><img class="d-block w-100" src="../../images/tutorchart2.png" alt="chart of question results"></a>
+            <a href="{{site.baseurl}}/images/tutorchart2.png" title="Does the video present any compatibility issues and open smoothly?"><img class="d-block w-100" src="{{site.baseurl}}/images/tutorchart2.png" alt="chart of question results"></a>
             <div class="carousel-caption d-none d-md-block">
             <h4>Tutorial Page Question 2</h4>
         <p>80% of particpants reported no compatibility issues. </p>
@@ -69,7 +69,7 @@ summary: "Information about the Usability Study conducted on this site"
        </div>
 
         <div class="carousel-item">
-            <a href="../../images/FAQchart.png" title="Did your understanding of 3D printing increase?"><img class="d-block w-100" src="../../images/FAQchart.png" alt="chart of question results"></a>
+            <a href="{{site.baseurl}}/images/FAQchart.png" title="Did your understanding of 3D printing increase?"><img class="d-block w-100" src="{{site.baseurl}}/images/FAQchart.png" alt="chart of question results"></a>
             <div class="carousel-caption d-none d-md-block">
             <h4>FAQ Page Question</h4>
    <p>80% of participants reported the page provided explaination about 3D printing in the Rebecca Crown Library. </p>
@@ -77,7 +77,7 @@ summary: "Information about the Usability Study conducted on this site"
        </div>
 
         <div class="carousel-item">
-            <a href="../../images/Facultychart.png" title="Does the page content peak your interest in 3D printing as coursework?"><img class="d-block w-100" src="../../images/Facultychart.png" alt="chart of question results"></a>
+            <a href="{{site.baseurl}}/images/Facultychart.png" title="Does the page content peak your interest in 3D printing as coursework?"><img class="d-block w-100" src="{{site.baseurl}}/images/Facultychart.png" alt="chart of question results"></a>
             <div class="carousel-caption d-none d-md-block">
             <h4>Faculty Page Question</h4>
    <p>Only 53% of participants reported to be interested in 3D printing as coursework.</p>
