--- a/faculty.html
+++ b/faculty.html
@@ -5,7 +5,7 @@ title: "Faculty Guide"
 
 <h2>{{page.title}}</h2>
 
-<figure><img src="images/landpage3Dprinter.png" alt="makerbot printer"></figure>
+<figure><img src="{{site.baseurl}}/images/landpage3Dprinter.png" alt="makerbot printer"></figure>
           <p>
             3D printing is an educational technology that is valuable across multiple disciplines. The Rebecca Crown Library staff is
             here to assist faculty with incorporating 3D printing into their courses. A librarian can work with you to create
@@ -21,7 +21,7 @@ title: "Faculty Guide"
           <h3>Manuals</h3>
             <p>
               There are several online manuals and
-              <a href="tutorial.html" title="tutorial">Tutorials</a> for Faculty to review.
+              <a href="{{site.baseurl}}/tutorial.html" title="tutorial">Tutorials</a> for Faculty to review.
             </p>
             <p>
               Faculty are encouraged to set-up a one-on-one instruction session in the 3D lab to get familiar with the equipment and processess.
@@ -35,7 +35,7 @@ title: "Faculty Guide"
             <p>3D printing is already being used at universities across the country for course work. In the above video, Dr. Marlo Steed, education faculty at the University of Louisville, explains how 3D printing is a tool that helps students explore and experience new and existing concepts. 3D printing is a tactile learning tool that can helps students visualize concepts in the classroom. 3D printing is a great tool to help the students of our visual culture access curriculums at the university level.</p>
             <p>
               Learn more on the
-                    <a href="faq.html" title="faq">FAQ</a> page.
+                    <a href="{{site.baseurl}}/faq.html" title="faq">FAQ</a> page.
             </p>
           <h3>Lesson Plans</h3>
             <p>Each class has different needs for 3D printing. Here are some free online lesson plans that we think you will enjoy: <a href="https://3duniverse.org/tag/3d-printing-lesson-plans/" title="3Duniverse.com">3DUniverse.com</a> and <a href="http://www.instructables.com/howto/3d+printing/" title="Instructables.com">Instructables.com</a>.</p>
