--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: base
 <table>
 <tr>
 <td>
-<p>If this is your first time here, check out the <a href="faq.html" title="faq">FAQ</a> page to discover what 3D printing is and what options are available for our printer. If you're familiar with 3D printing, check out the <a href="tutorial.html" title="tutorial">Tutorial</a> page for a guide on how to print your image. If you are looking for info on how to integrate 3D printing into your classroom, checkout the <a href="faculty.html" title="faculty">Faculty</a> page. If you are ready to print, click on our <a href="makeanappointment.html" title="appt">Appointment</a> page to reserve your time.</p>
+<p>If this is your first time here, check out the <a href="{{site.baseurl}}/faq.html" title="faq">FAQ</a> page to discover what 3D printing is and what options are available for our printer. If you're familiar with 3D printing, check out the <a href="{{site.baseurl}}/tutorial.html" title="tutorial">Tutorial</a> page for a guide on how to print your image. If you are looking for info on how to integrate 3D printing into your classroom, checkout the <a href="{{site.baseurl}}/faculty.html" title="faculty">Faculty</a> page. If you are ready to print, click on our <a href="{{site.baseurl}}/makeanappointment.html" title="appt">Appointment</a> page to reserve your time.</p>
   <p><a href="http://www.dom.edu/" title="Dominican University website" target="new">Dominican University</a> is located at <a href="https://goo.gl/maps/xwoiWs8G5c42" title="map">7900 West Division St., River Forest, IL 60305</a>. The 3D printing lab is located in the Media Center of the Rebecca Crown Library.</p>
 </td>
 <td>
