--- a/makeanappointment.html
+++ b/makeanappointment.html
@@ -9,7 +9,7 @@ title: "Make an Appointment"
       <p>Don't forget to describe the size of your design so we can schedule your appointment accordingly.</p>
 
 <!-- HTML form code starts here-->
-<form method="post" name="3Dprintingappt" action="/form-to-email.php">
+<form method="post" name="3Dprintingappt" action="{{site.baseurl}}/form-to-email.php">
 
   <div class="form-group">
     <label for="exampleInputEmail1">Full Name</label>
