--- a/tutorial.html
+++ b/tutorial.html
@@ -28,7 +28,7 @@ title: "Tutorial"
         <h3> Saving Copies</h3>
         <ul>
           <li> Files submitted will be deleted after printing is complete. Remember all objects are "printed as is." If troubleshooting is required, contact the Media Center for assistance. A complete object does not indicate a perfect one; notifications will be sent when imperfections occur. </li>
-          <li>Should printing fail because of hardware reasons or an .STL file, a second attempt will made and files corrected to enable printing. 
+          <li>Should printing fail because of hardware reasons or an .STL file, a second attempt will made and files corrected to enable printing.
         </li>
       </ul>
 
@@ -39,4 +39,4 @@ title: "Tutorial"
             <b>Best Online Tutorial</b>
           </a>
         </p>
-        <iframe width="768" height="430" src="https://www.youtube.com/embed/-Z-KsAwEwi8"></iframe>
+        <iframe width="768" height="430" src="https://www.youtube.com/embed/-Z-KsAwEwi8"></iframe allowfullscreen>
