updated external lesson plan links to target in new window

--- a/faculty.html
+++ b/faculty.html
@@ -38,4 +38,4 @@ title: "Faculty Guide"
                     <a href="{{site.baseurl}}/faq.html" title="faq">FAQ</a> page.
             </p>
           <h3>Lesson Plans</h3>
-            <p>Each class has different needs for 3D printing. Here are some free online lesson plans that we think you will enjoy: <a href="https://3duniverse.org/tag/3d-printing-lesson-plans/" title="3Duniverse.com">3DUniverse.com</a> and <a href="http://www.instructables.com/howto/3d+printing/" title="Instructables.com">Instructables.com</a>.</p>
+            <p>Each class has different needs for 3D printing. Here are some free online lesson plans that we think you will enjoy: <a href="https://3duniverse.org/tag/3d-printing-lesson-plans/" title="3Duniverse.com" target="_blank">3DUniverse.com</a> and <a href="http://www.instructables.com/howto/3d+printing/" title="Instructables.com" target="_blank">Instructables.com</a>.</p>
