--- a/_designs/usability.html
+++ b/_designs/usability.html
@@ -53,7 +53,7 @@ summary: "Information about the Usability Study conducted on this site"
         </div>
 
         <div class="carousel-item">
-            <a href="{{site.baseurl}}/images/tutorchart1.png" title="Does the provided text clearly explain 3D printing methods?"><img class="d-block w-100" src="{{site.baseur}}/images/tutorchart1.png" alt="chart of question results"></a>
+            <a href="{{site.baseurl}}/images/tutorchart1.png" title="Does the provided text clearly explain 3D printing methods?"><img class="d-block w-100" src="{{site.baseurl}}/images/tutorchart1.png" alt="chart of question results"></a>
             <div class="carousel-caption d-none d-md-block">
             <h4>Tutorial Page Question 1</h4>
          <p>93% of particpants found the content to be clear.</p>
