update button settings css

--- a/makeanappointment.html
+++ b/makeanappointment.html
@@ -71,6 +71,6 @@ title: "Make an Appointment"
   </div>
 
 
-  <button type="submit" name="submit" class="btn btn-dark" style="background-color: #F65A35; color: #ffffff;">Submit</button>
+  <button type="submit" name="submit" class="btn btn-dark buttonsettings">Submit</button>
 
       </form>
