--- a/_designs/designprogress.html
+++ b/_designs/designprogress.html
@@ -86,7 +86,7 @@ summary: "follow the design process of this microsite"
 </tr>
 <tr>
 <td>
-<p>This is the tutorial page table created by Katherine. All priorities executed as planned.</p>
+<p>This is the tutorial page table created by Katherine. <br /> All priorities executed as planned.</p>
 </td>
   <td>
 <figure><a href="{{site.baseurl}}/images/printing_tutorial_Katherine.pdf" title="Printing Tutorial Table PDF"><img class="thumbnail" src="{{site.baseurl}}/images/printing_tutorial_Katherine.png" alt="Printing Tutorial Page Table"></a>
@@ -96,7 +96,14 @@ summary: "follow the design process of this microsite"
 </tr>
 <tr>
 <td>
-<p>This is the FAQ page table created by Danielle. Priority 1 achieved- page has list of questions and links to # on page for answer. Priority 2 changed- live help in aside was postponed due to time constraints in coding. Priority 3 achieved- common nav bar completed using Jekyll layout. Priority 4 achieved- hours completed, located in footer.</p>
+<p>This is the FAQ page table created by Danielle. <br />
+  <ul>
+  <li><strong>Priority 1: Achieved</strong> Page has list of questions and links to # on page for answer.</li>
+  <li><strong>Priority 2: Changed</strong> Live help in aside was postponed due to time constraints in coding.</li>
+  <li><strong>Priority 3: Achieved</strong> Common navigation bar completed using Jekyll layout.</li>
+  <li><strong>Priority 4: Achieved</strong> Hours completed, located in footer.</li>
+  </ul>
+</p>
 </td>
   <td>
 <figure><a href="{{site.baseurl}}/images/faq_Danielle.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="{{site.baseurl}}/images/faq_Danielle.png" alt="FAQ Page Table PDF"></a>
@@ -106,7 +113,13 @@ summary: "follow the design process of this microsite"
 </tr>
 <tr>
 <td>
-<p>This is the faculty page table created by April. The content for Priority 1 has changed. A list of disciplines that are currently using 3D printing technology has been provided on the FAQ page.  A video from a university utilizing 3D printing will be included on the page instead of an article. Links to instruction and lesson plan sites were added to the page by group members.  </p>
+<p>This is the faculty page table created by April. The content for Priority 1 has changed:
+  <ul>
+    <li>A list of disciplines that are currently using 3D printing technology has been provided on the FAQ page.</li>
+    <li>A video from a university utilizing 3D printing will be included on the page instead of an article.</li>
+    <li>Links to instruction and lesson plan sites were added to the page by group members.</li>
+  </ul>
+</p>
 </td>
 <td>
 <figure><a href="{{site.baseurl}}/images/faculty_April.pdf" title="Faculty Page Table PDF"><img class="thumbnail" src="{{site.baseurl}}/images/facultypagetable.png" alt="Faculty Page Table"></a>
@@ -116,7 +129,13 @@ summary: "follow the design process of this microsite"
 </tr>
 <tr>
 <td>
-<p>This is the appointment page table created by Karla. Priority 1 achieved- additional fields added. Priority 2 changed- Gallery added to Jekyll layout. Social media accounts not created; could be added to aside or footer if site is implemented in future.</p>
+<p>This is the appointment page table created by Karla.
+  <ul>
+    <li><strong>Priority 1: Achieved</strong> Additional fields added.</li>
+    <li><strong>Priority 2: Changed</strong> Gallery added to Jekyll layout.</li>
+    <li>Social media accounts not created; could be added to aside or footer if site is implemented in future.</li>
+  </ul>
+</p>
 </td>
   <td>
 <figure><a href="{{site.baseurl}}/images/Make_appoinment_Karla.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="{{site.baseurl}}/images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF"></a>
