Edit </p> in lists

--- a/_designs/designprogress.html
+++ b/_designs/designprogress.html
@@ -96,14 +96,13 @@ summary: "follow the design process of this microsite"
 </tr>
 <tr>
 <td>
-<p>This is the FAQ page table created by Danielle. <br />
+  <p>This is the FAQ page table created by Danielle.</p>
   <ul>
   <li><strong>Priority 1: Achieved</strong> Page has list of questions and links to # on page for answer.</li>
   <li><strong>Priority 2: Changed</strong> Live help in aside was postponed due to time constraints in coding.</li>
   <li><strong>Priority 3: Achieved</strong> Common navigation bar completed using Jekyll layout.</li>
   <li><strong>Priority 4: Achieved</strong> Hours completed, located in footer.</li>
   </ul>
-</p>
 </td>
   <td>
 <figure><a href="{{site.baseurl}}/images/faq_Danielle.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="{{site.baseurl}}/images/faq_Danielle.png" alt="FAQ Page Table PDF"></a>
@@ -113,13 +112,12 @@ summary: "follow the design process of this microsite"
 </tr>
 <tr>
 <td>
-<p>This is the faculty page table created by April. The content for Priority 1 has changed:
+  <p>This is the faculty page table created by April. The content for Priority 1 has changed:</p>
   <ul>
     <li>A list of disciplines that are currently using 3D printing technology has been provided on the FAQ page.</li>
     <li>A video from a university utilizing 3D printing will be included on the page instead of an article.</li>
     <li>Links to instruction and lesson plan sites were added to the page by group members.</li>
   </ul>
-</p>
 </td>
 <td>
 <figure><a href="{{site.baseurl}}/images/faculty_April.pdf" title="Faculty Page Table PDF"><img class="thumbnail" src="{{site.baseurl}}/images/facultypagetable.png" alt="Faculty Page Table"></a>
@@ -129,13 +127,12 @@ summary: "follow the design process of this microsite"
 </tr>
 <tr>
 <td>
-<p>This is the appointment page table created by Karla.
+  <p>This is the appointment page table created by Karla.</p>
   <ul>
     <li><strong>Priority 1: Achieved</strong> Additional fields added.</li>
     <li><strong>Priority 2: Changed</strong> Gallery added to Jekyll layout.</li>
     <li>Social media accounts not created; could be added to aside or footer if site is implemented in future.</li>
   </ul>
-</p>
 </td>
   <td>
 <figure><a href="{{site.baseurl}}/images/Make_appoinment_Karla.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="{{site.baseurl}}/images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF"></a>
